--- a/zend/module/Application/view/application/index/index.phtml
+++ b/zend/module/Application/view/application/index/index.phtml
@@ -1,26 +1,82 @@
-<div class="hero-unit">
-    <h1><?php echo sprintf($this->translate('Welcome to %sZend Framework 2%s'), '<span class="zf-green">', '</span>') ?></h1>
-    <p><?php echo sprintf($this->translate('Congratulations! You have successfully installed the %sZF2 Skeleton Application%s. You are currently running Zend Framework version %s. This skeleton can serve as a simple starting point for you to begin building your application on ZF2.'), '<a href="https://github.com/zendframework/ZendSkeletonApplication" target="_blank">', '</a>', \Zend\Version\Version::VERSION) ?></p>
-    <p><a class="btn btn-success btn-large" href="https://github.com/zendframework/zf2" target="_blank"><?php echo $this->translate('Fork Zend Framework 2 on GitHub') ?> &raquo;</a></p>
+<?php
+$this->host_name = $_SERVER['SERVER_NAME'];
+?>
+<p class="howitworks_head_text">How to stay in a vacation rental</p>
+<p class="howitworks_head_subtext">If you're new to vacation rentals, it's easy to find the rental perfect for you on FlipKey. Vacations are better with a place to call home.</p>
+<div class="howitworks_main_box" >
+    <div class="howitworks_three_column" style="float:left; margin-top:220px;margin-left:20px;">
+        <span class="howitworks_list">1</span>
+        <p class="howitworks_column_head">Find an apartment, condo, or home to rent on FlipKey.</p>
+        <p class="howitworks_column_text">Vacation rentals combine the excitement of travel with the comforts of home. With extra space, privacy, and amenities, it's the smartest choice. Here's how to begin.</p>
+        <ul>
+        	<li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Explore your options.</span> <span class="howitworks_column_text_list">Search for a specific location from our <a href="http://www.flipkey.com">homepage</a> or <a href="http://www.flipkey.com/vacation-rentals/">explore all destinations</a> if you aren't sure where you want to go.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Check out the details.</span> <span class="howitworks_column_text_list">You can view each rental to check out photos and availability, bedroom and bathroom details, and see what activities and restaurants are nearby.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Read Reviews.</span> <span class="howitworks_column_text_list">Take a look at what past guests have said about the rental. FlipKey has real reviews from past guests. Rental owners can never edit reviews.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Contact a few rentals.</span> <span class="howithowitworks_column_text_listworks_column_text">Ask questions before you make a reservation. We recommend contacting at least 5 rental owners or managers to make sure you can choose the perfect place.</span></li>
+        </ul>
+    </div>
+    <div class="howitworks_three_column" style="float:left; margin-top:220px; margin-left: 60px;">
+        <span class="howitworks_list">2</span>
+        <p class="howitworks_column_head">Book your reservation.</p>
+        <p class="howitworks_column_text">After contacting several rentals, you will receive responses from rental owners and managers confirming rates and availability. Now you're ready to select a rental and book your reservation.</p>
+        <ul>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Sign a rental agreement.</span> <span class="howitworks_column_text_list">Expect to receive a rental agreement which helps everyone understand the pricing, policies, and check-in/check-out procedure for your stay.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Send your deposit. </span><span class="howitworks_column_text_list">Most rentals request a small deposit to confirm the reservation.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Stay safe with your payment.</span> <span class="howitworks_column_text_list">Avoid paying by wire transfer (such as Western Union or Money Gram), and instead always pay by credit card or PayPal.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Protect your vacation.</span> <span class="howitworks_column_text_list">FlipKey offers travel insurance specially designed for vacation rentals. <a href="http://flipkey.berkelycare.com">Learn more</a></span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Ask us!</span> <span class="howitworks_column_text_list">If you aren't sure about anything, feel free to <a href="http://www.flipkey.com/Pages/contact_form/">contact FlipKey</a> for advice.</span></li>
+        </ul>
+    </div>
+    <div class="howitworks_three_column" style="float:right; margin-top:220px; margin-right: 15px;">
+        <span class="howitworks_list">3</span>
+        <p class="howitworks_column_head">Check-in and have a great trip!</p>
+        <p class="howitworks_column_text">Your vacation is almost here! Before you check-in, here are some reminders to have a great stay.</p>
+        <ul>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Get the keys.</span> <span class="howitworks_column_text_list">Most rentals use either a lock box or keep keys at a central property management office. Make sure you know where to receive the keys upon your arrival.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Discover the area.</span> <span class="howitworks_column_text_list">Plan ahead by doing some research on your destination before the trip. <a href="http://www.tripadvisor.com">TripAdvisor</a> is especially useful for finding things to do.</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Be the perfect guest.</span> <span class="howitworks_column_text_list">These are real homes, so enjoy your stay just as if you were living in your own house. Remember to tidy up before you leave!</span></li>
+            <li class="howitworks_list_item"><span class="howitworks_column_text_list_bold">Share your experience.</span> <span class="howitworks_column_text_list">After your trip, come back to FlipKey to leave a review. You’ll help future travelers know about your experience.</span></li>
+        </ul>
+    </div>
 </div>
+<div style="width:950px;"><hr style="width:950px;"/></div>
+<div class="howitworks_discover_box">
+    <p class="howitworks_head_text" id="discover_head">Discover why travelers love FlipKey.</p>
 
-<div class="row">
-
-    <div class="span4">
-        <h2><?php echo $this->translate('Follow Development') ?></h2>
-        <p><?php echo sprintf($this->translate('Zend Framework 2 is under active development. If you are interested in following the development of ZF2, there is a special ZF2 portal on the official Zend Framework website which provides links to the ZF2 %swiki%s, %sdev blog%s, %sissue tracker%s, and much more. This is a great resource for staying up to date with the latest developments!'), '<a href="http://framework.zend.com/wiki/display/ZFDEV2/Home">', '</a>', '<a href="http://framework.zend.com/zf2/blog">', '</a>', '<a href="http://framework.zend.com/issues/browse/ZF2">', '</a>') ?></p>
-        <p><a class="btn btn-success" href="http://framework.zend.com/zf2" target="_blank"><?php echo $this->translate('ZF2 Development Portal') ?> &raquo;</a></p>
+    <div class="howitworks_image_box" style="float:left; margin-bottom: 32px;">
+        <img src="http://<?=$this->host_name?>:8880/img/how-it-works-thumb1.jpg" />
     </div>
 
-    <div class="span4">
-        <h2><?php echo $this->translate('Discover Modules') ?></h2>
-        <p><?php echo sprintf($this->translate('The community is working on developing a community site to serve as a repository and gallery for ZF2 modules. The project is available %son GitHub%s. The site is currently live and currently contains a list of some of the modules already available for ZF2.'), '<a href="https://github.com/zendframework/modules.zendframework.com">', '</a>') ?></p>
-        <p><a class="btn btn-success" href="http://modules.zendframework.com/" target="_blank"><?php echo $this->translate('Explore ZF2 Modules') ?> &raquo;</a></p>
-   </div>
+    <div class="howitworks_left_boxes howitworks_left_box">
+        <p class="howitworks_box_header">Homes. Condos. Villas. Resorts.</p>
+        <p class="howitworks_box_text">Choose the perfect place to stay. You’ll always have options when you travel, anywhere in the world.</p>
+    </div>
+    
+    <div class="howitworks_image_box howitworks_right_box">
+        <img src="http://<?=$this->host_name?>:8880/img/how-it-works-thumb2.jpg" />
+    </div>
 
-   <div class="span4">
-       <h2><?php echo $this->translate('Help &amp; Support') ?></h2>
-       <p><?php echo sprintf($this->translate('If you need any help or support while developing with ZF2, you may reach us via IRC: %s#zftalk on Freenode%s. We\'d love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the %smailing lists%s.'), '<a href="irc://irc.freenode.net/zftalk">', '</a>', '<a href="http://framework.zend.com/wiki/display/ZFDEV/Mailing+Lists">', '</a>') ?></p>
-       <p><a class="btn btn-success" href="http://webchat.freenode.net?channels=zftalk" target="_blank"><?php echo $this->translate('Ping us on IRC') ?> &raquo;</a></p>
-   </div>
+    <div class="howitworks_left_boxes howitworks_right_box">
+        <p class="howitworks_box_header">A new way to travel.</p>
+        <p class="howitworks_box_text">Rent for 1 night to 1 month. Live like a local anywhere in the world with your own vacation rental house.</p>
+    </div>
+    <div style="clear:both;"></div>
+
+    <div class="howitworks_image_box" style="float:left; margin-bottom: 20px;">
+        <img src="http://<?=$this->host_name?>:8880/img/how-it-works-thumb6.jpg" />
+    </div>
+    <div class="howitworks_left_boxes howitworks_left_box">
+        <p class="howitworks_box_header">Read what past guests are saying.</p>
+        <p class="howitworks_box_text">Find out the real scoop on each rental. FlipKey has the largest collection of verified and trusted guest reviews in the industry!</p>
+    </div>
+    
+    <div class="howitworks_image_box howitworks_right_box">
+        <img src="http://<?=$this->host_name?>:8880/img/how-it-works-thumb4.jpg" />
+    </div>   
+    <div class="howitworks_left_boxes howitworks_right_box">
+        <p class="howitworks_box_header">Travel happy.</p>
+        <p class="howitworks_box_text">Who wants to live in a hotel? Take the comforts of home with you. Enjoy your own kitchen, extra space, and maybe even a backyard.</p>
+    </div>
+    
+    <div style="clear:both"></div>
 </div>
